added links, linked styles in other files, added javascript to landing page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </div>
         <ul>
             <li><a href="">About</a></li>
-            <li><a href="">Newsletter</a></li>
-            <li><a href="">Win a Voucher!</a></li>
+            <li><a href="newsletter.html">Newsletter</a></li>
+            <li><a href="quiz.html">Win a Voucher!</a></li>
             <li><a href="">Directions</a></li>
             <li><a href="">Contact</a></li>
         </ul>
@@ -39,12 +39,12 @@
         <div class="reviews">
             <div class="reviews-wrapper">            
                 <div class="review">
-                    <p>"Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi fugit at fugiat voluptatum impedit est, tempore ipsa odio iure nobis in ex quae voluptate!" - Andrew</p>
+                    <p id="review-text">"Absolutely love this vegetable shop! The produce is always fresh and of high quality. The staff is friendly and knowledgeable. A delightful shopping experience every time!" - Andrew</p>
                 </div>
                 <select name="review" id="review">
                     <option value="andrew">Review by: Andrew</option>
                     <option value="monika">Review by: Monika</option>
-                    <option value="adam">Review by: Kate</option>
+                    <option value="kate">Review by: Kate</option>
                     <option value="sam">Review by: Sam</option>
                 </select>
             </div>
@@ -54,22 +54,23 @@
         <div class="footer-menu">
             <ul>
                 <a href=""><li>About</li></a>
-                <a href=""><li>Newsletter</li></a>
-                <a href=""><li>Win a Voucher!</li></a>
+                <a href="newsletter.html"><li>Newsletter</li></a>
+                <a href="quiz.html"><li>Win a Voucher!</li></a>
                 <a href=""><li>Directions</li></a>
                 <a href=""><li>Contact</li></a>
             </ul>
         </div>
 
         <div class="socials">
-            <a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
-            <a href=""><i class="fa-brands fa-facebook-f fa-xl"></i></a>
-            <a href=""><i class="fa-brands fa-google fa-xl"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp fa-xl"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
+            <a href="https://www.google.com/"><i class="fa-brands fa-google fa-xl"></i></a>
+            <a href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
         </div>
         <div class="authors">
-            <p>Website created by: Aneta Kotas, Arisha Mirza, Ryan Stokes</p>
+            <p>Website created by: <a href="https://github.com/anetakotas">Aneta Kotas</a>, <a href="https://github.com/arishanci">Arisha Mirza</a>, <a href="https://github.com/RyanStokes95">Ryan Stokes</a></p>
         </div>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
