--- a/newsletter.html
+++ b/newsletter.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Newsletter">
     <title>Newsletter Sign Up</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="newsletter.js" defer></script>
 </head>
 <body>
