--- a/offer.html
+++ b/offer.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!-- Fonts from Google Fonts - PT Serif -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
-    <title>Mick's Garden</title>
+    <title>Mick's Garden - Offer</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="images/mick logo.png" alt="">
+            <img src="images/mick logo.png" alt="logo">
         </div>
         <ul>
-            <li><a href="offer.html">Offer</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="quiz.html">Win a Voucher!</a></li>
             <li><a href="">Directions</a></li>
@@ -26,8 +22,7 @@
     </header>
     <main>
         <div class="welcome">
-            <h1>Best Produce</h1>
-            <h2>from Mick's Garden!</h2>
+            <h1>Our Offer</h1>
         </div>
         <div class="offer">
             <div class="offer-card offer1">
@@ -40,24 +35,11 @@
                 <h3>General</h3>
             </div>
         </div>
-        <div class="reviews">
-            <div class="reviews-wrapper">            
-                <div class="review">
-                    <p id="review-text">"Absolutely love this vegetable shop! The produce is always fresh and of high quality. The staff is friendly and knowledgeable. A delightful shopping experience every time!" - Andrew</p>
-                </div>
-                <select name="review" id="review">
-                    <option value="andrew">Review by: Andrew</option>
-                    <option value="monika">Review by: Monika</option>
-                    <option value="kate">Review by: Kate</option>
-                    <option value="sam">Review by: Sam</option>
-                </select>
-            </div>
-        </div>
     </main>
     <footer>
         <div class="footer-menu">
             <ul>
-                <a href=""><li>Offer</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="newsletter.html"><li>Newsletter</li></a>
                 <a href="quiz.html"><li>Win a Voucher!</li></a>
                 <a href=""><li>Directions</li></a>
