--- a/quiz.html
+++ b/quiz.html
@@ -10,8 +10,17 @@
 </head>
 <body>
     <div id="container">
-        <header id="header">
-            <h1 id="heading">Competition</h1>
+        <header>
+            <div class="logo">
+                <img src="images/mick logo.png" alt="">
+            </div>
+            <ul>
+                <li><a href="">About</a></li>
+                <li><a href="newsletter.html">Newsletter</a></li>
+                <li><a href="quiz.html">Win a Voucher!</a></li>
+                <li><a href="">Directions</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
         </header>
         <nav id="nav">
             <ul>
@@ -78,10 +87,26 @@
                 <button id="submitButton">Submit</button>
             </div>
         </div>
-        <footer id="footer">
-            <h2 id="footer-content">
-                Footer
-            </h2>
+        <footer>
+            <div class="footer-menu">
+                <ul>
+                    <a href=""><li>About</li></a>
+                    <a href="newsletter.html"><li>Newsletter</li></a>
+                    <a href="quiz.html"><li>Win a Voucher!</li></a>
+                    <a href=""><li>Directions</li></a>
+                    <a href=""><li>Contact</li></a>
+                </ul>
+            </div>
+    
+            <div class="socials">
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
+                <a href="https://www.google.com/"><i class="fa-brands fa-google fa-xl"></i></a>
+                <a href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
+            </div>
+            <div class="authors">
+                <p>Website created by: <a href="https://github.com/anetakotas">Aneta Kotas</a>, <a href="https://github.com/arishanci">Arisha Mirza</a>, <a href="https://github.com/RyanStokes95">Ryan Stokes</a></p>
+            </div>
         </footer>
     </div>
 </body>
