Added fontawesome to script in quiz and newsletter

--- a/quiz.html
+++ b/quiz.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Quiz, Voucher">
     <title>Voucher Competition</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
     <script src="quiz-script.js" defer></script>
 </head>
 <body>
