--- a/newsletter.html
+++ b/newsletter.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Newsletter">
     <title>Newsletter Sign Up</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
     <script src="newsletter.js" defer></script>
 </head>
 <body>
