finished design for offer page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Fonts from Google Fonts - PT Serif -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
     <title>Mick's Garden</title>
 </head>
@@ -43,6 +43,13 @@
         <div class="reviews">
             <div class="reviews-wrapper">            
                 <div class="review">
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                    </div>
                     <p id="review-text">"Absolutely love this vegetable shop! The produce is always fresh and of high quality. The staff is friendly and knowledgeable. A delightful shopping experience every time!" - Andrew</p>
                 </div>
                 <select name="review" id="review">
