--- a/offer.html
+++ b/offer.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
     <title>Mick's Garden - Offer</title>
 </head>
@@ -24,15 +27,55 @@
         <div class="welcome">
             <h1>Our Offer</h1>
         </div>
-        <div class="offer">
-            <div class="offer-card offer1">
-                <h3>Vegetables</h3>
+        <div class="offer-info">
+            <p>Website offer differs from in-store offer. For full and current offer - <a href="directions.html">come visit us!</a></p>
+        </div>
+        
+        <div class="offer-page">
+            <h2>Vegetebles</h2>
+            <div class="offer-veg">
+                <div class="offer-card2 veg1">
+                    <p>Carrots</p>
+                </div>
+                <div class="offer-card2 veg2">
+                    <p>Peppers</p>
+                </div>
+                <div class="offer-card2 veg3">
+                    <p>Tomatoes</p>
+                </div>
+                <div class="offer-card2 veg4">
+                    <p>Potatoes</p>
+                </div>
+                <div class="offer-card2 veg5">
+                    <p>Brussel</p>
+                </div>
             </div>
-            <div class="offer-card offer2">
-                <h3>Fruits</h3>
+            <h2>Fruits</h2>
+            <div class="offer-fru">
+                <div class="offer-card2 fru1">
+                    <p>Apples</p>
+                </div>
+                <div class="offer-card2 fru2">
+                    <p>Oranges</p>
+                </div>
+                <div class="offer-card2 fru3">
+                    <p>Strawberry</p>
+                </div>
+                <div class="offer-card2 fru4">
+                    <p>Banans</p>
+                </div>
+                <div class="offer-card2 fru5">
+                    <p>Pears</p>
+                </div>
             </div>
-            <div class="offer-card offer3">
-                <h3>General</h3>
+            <h2>General</h2>
+            <div class="offer-gen">
+                <div class="offer-card2 gen1">
+                    <p>Drinks</p>
+                </div>
+                <div class="offer-card2 gen2">
+                    <p>Alcohol</p>
+                </div>
             </div>
         </div>
     </main>
