--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,7 @@
                 <img src="images/mick logo.png" alt="">
             </div>
             <ul>
-                <li><a href="">About</a></li>
+                <li><a href="offer.html">Offer</a></li>
                 <li><a href="newsletter.html">Newsletter</a></li>
                 <li><a href="quiz.html">Win a Voucher!</a></li>
                 <li><a href="">Directions</a></li>
