finished offer page and added javascript

--- a/offer.html
+++ b/offer.html
@@ -30,7 +30,6 @@
         <div class="offer-info">
             <p>Website offer differs from in-store offer. For full and current offer - <a href="directions.html">come visit us!</a></p>
         </div>
-        
         <div class="offer-page">
             <h2>Vegetebles</h2>
             <div class="offer-veg">
@@ -78,6 +77,12 @@
                 </div>
             </div>
         </div>
+        <div class="offer-question">
+            <p>Wondering if we have something particular? Type the item to check:</p>
+            <input type="text" name="offer-question" id="offer-question">
+            <button type="button" id="offer-check" onclick="checkItems()">Check</button>
+            <p id="offer-response"></p>
+        </div>
     </main>
     <footer>
         <div class="footer-menu">
@@ -100,6 +105,6 @@
             <p>Website created by: <a href="https://github.com/anetakotas">Aneta Kotas</a>, <a href="https://github.com/arishanci">Arisha Mirza</a>, <a href="https://github.com/RyanStokes95">Ryan Stokes</a></p>
         </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="offer.js"></script>
 </body>
 </html>
