minor css changes and more drop down options for newsletter

--- a/newsletter.html
+++ b/newsletter.html
@@ -51,13 +51,17 @@
                 <select class="dropdown" id="news-choice">
                     <option class="option" value="fruit">Fruit</option>
                     <option class="option" value="veg">Vegetables</option>
+                    <option class="option" value="veg">General</option>
                     <option class="option" value="fruit+veg">Fruit and Vegetables</option>
+                    <option class="option" value="fruit+veg">Fruit and General</option>
+                    <option class="option" value="fruit+veg">General and Vegetables</option>
+                    <option class="option" value="fruit+veg">All Products</option>
                 </select>
                 <br>
                 <label class="label">Contact Preference:</label>
                 <br>
                 <input class="input" type="radio" name="contact" id="contact-choice1" value="Mobile" checked>
-                <label class="label" for="contact-choice1">Mobile</label>
+                <label class="label" for="contact-choice1">Mobile (SMS)</label>
                 <br>
                 <input class="input" type="radio" name="contact" id="contact-choice2" value="Email">
                 <label class="label" for="contact-choice2">Email</label>
