Minor Css changes

--- a/newsletter.html
+++ b/newsletter.html
@@ -49,13 +49,13 @@
                 <label class="label" for="news-choice">Which products are you interested in?</label>
                 <br>
                 <select class="dropdown" id="news-choice">
-                    <option class="option" value="fruit">Fruit</option>
-                    <option class="option" value="veg">Vegetables</option>
-                    <option class="option" value="veg">General</option>
-                    <option class="option" value="fruit+veg">Fruit and Vegetables</option>
-                    <option class="option" value="fruit+veg">Fruit and General</option>
-                    <option class="option" value="fruit+veg">General and Vegetables</option>
-                    <option class="option" value="fruit+veg">All Products</option>
+                    <option class="option" value="Fruit">Fruit</option>
+                    <option class="option" value="Veg">Vegetables</option>
+                    <option class="option" value="General">General</option>
+                    <option class="option" value="Fruit+Veg">Fruit and Vegetables</option>
+                    <option class="option" value="Fruit+General">Fruit and General</option>
+                    <option class="option" value="General+Veg">General and Vegetables</option>
+                    <option class="option" value="All">All Products</option>
                 </select>
                 <br>
                 <label class="label">Contact Preference:</label>
