--- a/quiz.html
+++ b/quiz.html
@@ -24,7 +24,7 @@
             </ul>
         </header>
         <h2 id="quiz-heading">
-            Answer these questions correctly to be in a draw for a €100 voucher!
+            Answer these questions to be in a draw for a €100 voucher!
         </h2>
         <div id="quiz-container">
             <div id="question1">
