added responsivity and hamburger menu for small screens but with error

--- a/offer.html
+++ b/offer.html
@@ -15,7 +15,10 @@
         <div class="logo">
             <img src="images/mick logo.png" alt="logo">
         </div>
-        <ul>
+        <div class="ham-menu" id="ham-menu">
+            <i class="fa-solid fa-bars fa-2xl"></i>
+        </div> 
+        <ul id="ham-content">
             <li><a href="index.html">Home</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="quiz.html">Win a Voucher!</a></li>
@@ -106,5 +109,6 @@
         </div>
     </footer>
     <script src="offer.js"></script>
+    <script src="hamburger.js"></script>
 </body>
 </html>
