--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,7 @@
                 <img src="images/mick logo.png" alt="">
             </div>
             <ul>
-
+                <li><a href="index.html"></a></li>
                 <li><a href="offer.html">Offer</a></li>
                 <li><a href="newsletter.html">Newsletter</a></li>
                 <li><a href="">Directions</a></li>
