--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!-- Fonts from Google Fonts - PT Serif -->
+    <!-- Fonts from Google Fonts - Slabo 27-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
@@ -16,7 +16,10 @@
         <div class="logo">
             <img src="images/mick logo.png" alt="">
         </div>
-        <ul>
+        <div class="ham-menu" id="ham-menu">
+            <i class="fa-solid fa-bars fa-2xl"></i>
+        </div>
+        <ul id="ham-content">
             <li><a href="offer.html">Offer</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="quiz.html">Win a Voucher!</a></li>
@@ -83,5 +86,6 @@
         </div>
     </footer>
     <script src="index.js"></script>
+    <script src="hamburger.js"></script>
 </body>
 </html>
