added links to contact

--- a/quiz.html
+++ b/quiz.html
@@ -20,7 +20,7 @@
                 <li><a href="offer.html">Offer</a></li>
                 <li><a href="newsletter.html">Newsletter</a></li>
                 <li><a href="">Directions</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </header>
         <h2 id="quiz-heading">
