--- a/newsletter.html
+++ b/newsletter.html
@@ -20,7 +20,7 @@
                 <li><a href="offer.html">Offer</a></li>
                 <li><a href="quiz.html">Win a Voucher!</a></li>
                 <li><a href="">Directions</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </header>
         <div id="h2-container">
