--- a/offer.html
+++ b/offer.html
@@ -13,17 +13,19 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/mick logo.png" alt="logo">
+            <a href="index.html"><img src="images/mick logo.png" alt="logo"></a>
         </div>
         <div class="ham-menu" id="ham-menu">
             <i class="fa-solid fa-bars fa-2xl"></i>
         </div> 
         <ul id="ham-content">
             <li><a href="index.html">Home</a></li>
+            <li><a href="offer.html">Offer</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="quiz.html">Win a Voucher!</a></li>
-            <li><a href="">Directions</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="directions.html">Directions</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </header>
     <main>
@@ -91,10 +93,12 @@
         <div class="footer-menu">
             <ul>
                 <a href="index.html"><li>Home</li></a>
+                <a href="offer.html"><li>Offer</li></a>
                 <a href="newsletter.html"><li>Newsletter</li></a>
                 <a href="quiz.html"><li>Win a Voucher!</li></a>
-                <a href=""><li>Directions</li></a>
-                <a href=""><li>Contact</li></a>
+                <a href="directions.html"><li>Directions</li></a>
+                <a href="contact.html"><li>Contact</li></a>
+                <a href="about.html"><li>About</li></a>
             </ul>
         </div>
 
