--- a/quiz.html
+++ b/quiz.html
@@ -13,14 +13,16 @@
     <div id="container">
         <header>
             <div class="logo">
-                <img src="images/mick logo.png" alt="">
+                <a href="index.html"><img src="images/mick logo.png" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="offer.html">Offer</a></li>
                 <li><a href="newsletter.html">Newsletter</a></li>
-                <li><a href="">Directions</a></li>
+                <li><a href="quiz.html">Win a Voucher!</a></li>
+                <li><a href="directions.html">Directions</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </header>
         <h2 id="quiz-heading">
@@ -82,11 +84,13 @@
         <footer>
             <div class="footer-menu">
                 <ul>
-                    <a href=""><li>About</li></a>
+                    <a href="index.html"><li>Home</li></a>
+                    <a href="offer.html"><li>Offer</li></a>
                     <a href="newsletter.html"><li>Newsletter</li></a>
                     <a href="quiz.html"><li>Win a Voucher!</li></a>
-                    <a href=""><li>Directions</li></a>
-                    <a href=""><li>Contact</li></a>
+                    <a href="directions.html"><li>Directions</li></a>
+                    <a href="contact.html"><li>Contact</li></a>
+                    <a href="about.html"><li>About</li></a>
                 </ul>
             </div>
     
