--- a/offer.html
+++ b/offer.html
@@ -20,34 +20,37 @@
             <a href="index.html"><img src="images/mick logo.png" alt="logo"></a>
         </div>
         <div id="nav-container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-md navbar-light bg-light">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+                  <ul class="navbar-nav">
                     <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="newsletter.html">Newsletter</a>
+                      <a class="nav-link" href="offer.html">Offer <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="quiz.html">Win a Voucher!</a>
+                      <a class="nav-link" href="newsletter.html">Newsletter</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                      <a class="nav-link" href="quiz.html">Win a Voucher!</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="directions.html">Directions</a>
+                      <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                      <a class="nav-link" href="directions.html">Directions</a>
                     </li>
-                </ul>
+                    <li class="nav-item">
+                      <a class="nav-link" href="about.html">About</a>
+                    </li>
+                  </ul>
                 </div>
-            </nav>
+              </nav>
         </div>
     </header>
     <main>
