--- a/html/about.html
+++ b/html/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <!-- Fonts from Google Fonts - Slabo 27-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="images/mick logo.png" alt="logo"></a>
+            <a href="html/index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
@@ -73,6 +73,32 @@
                 </ul>
             </div>
         </div>
+        <div class="about-slider">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <a href="https://unsplash.com/photos/tSlvoSZK77c" id="car1"><img class="d-block w-100" src="/images/car1.png" alt="First slide"></a>
+              </div>
+              <div class="carousel-item">
+                <a href="https://unsplash.com/photos/uzw0g1GNjOU" id="car2"><img class="d-block w-100" src="/images/car2.png" alt="Second slide"></a>
+              </div>
+              <div class="carousel-item">
+                <a href="https://unsplash.com/photos/X6szORoZqMA" id="car3"><img class="d-block w-100" src="/images/car3.png" alt="Third slide"></a>
+              </div>
+              <div class="carousel-item">
+                <a href="https://unsplash.com/photos/JMjNnQ2xFoY" id="car4"><img class="d-block w-100" src="/images/car4.png" alt="Third slide"></a>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
     </main>
     <footer>
         <div class="footer-menu">
@@ -97,7 +123,8 @@
             <p>Website created by: <a href="https://github.com/anetakotas">Aneta Kotas</a>, <a href="https://github.com/arishanci">Arisha Mirza</a>, <a href="https://github.com/RyanStokes95">Ryan Stokes</a></p>
         </div>
     </footer>
-    <script src="index.js"></script>
-    <script src="hamburger.js"></script>
+    <script src="/js/index.js"></script>
+    <script src="/js/hamburger.js"></script>
+    <script src="/js/about.js"></script>
 </body>
 </html>
