--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <!-- Fonts from Google Fonts - Slabo 27-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="images/mick logo.png" alt="logo"></a>
+            <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
@@ -112,7 +112,7 @@
             <p>Website created by: <a href="https://github.com/anetakotas">Aneta Kotas</a>, <a href="https://github.com/arishanci">Arisha Mirza</a>, <a href="https://github.com/RyanStokes95">Ryan Stokes</a></p>
         </div>
     </footer>
-    <script src="index.js"></script>
-    <script src="hamburger.js"></script>
+    <script src="/js/index.js"></script>
+    <script src="/js/hamburger.js"></script>
 </body>
 </html>
