--- a/html/offer.html
+++ b/html/offer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="images/mick logo.png" alt="logo"></a>
+            <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
         <div id="nav-container">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -137,7 +137,7 @@
             <p>Website created by: <a href="https://github.com/anetakotas">Aneta Kotas</a>, <a href="https://github.com/arishanci">Arisha Mirza</a>, <a href="https://github.com/RyanStokes95">Ryan Stokes</a></p>
         </div>
     </footer>
-    <script src="offer.js"></script>
-    <script src="hamburger.js"></script>
+    <script src="/js/offer.js"></script>
+    <script src="/js/hamburger.js"></script>
 </body>
 </html>
