--- a/html/quiz.html
+++ b/html/quiz.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Quiz, Voucher">
     <title>Voucher Competition</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
-    <script src="quiz.js" defer></script>
+    
 </head>
 <body>
     <div id="container">
         <header>
             <div class="logo">
-                <a href="index.html"><img src="images/mick logo.png" alt="logo"></a>
+                <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
             </div>
             <div id="nav-container">
                 <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -133,5 +133,6 @@
             </div>
         </footer>
     </div>
+    <script src="/js/quiz.js" defer></script>
 </body>
 </html>
