--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="html/index.html"><img src="/images/mick logo.png" alt="logo"></a>
+            <a href="/index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
         <!--Bootstrap Navigation-->
         <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="offer.html">Offer <span class="sr-only">(current)</span></a>
@@ -106,7 +106,7 @@
     <footer>
         <div class="footer-menu">
             <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="/index.html"><li>Home</li></a>
                 <a href="offer.html"><li>Offer</li></a>
                 <a href="newsletter.html"><li>Newsletter</li></a>
                 <a href="quiz.html"><li>Win a Voucher!</li></a>
