--- a/html/contact.html
+++ b/html/contact.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
+            <a href="/index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
         <!--Bootstrap Navigation-->
         <div id="nav-container">
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="offer.html">Offer <span class="sr-only">(current)</span></a>
@@ -88,13 +88,13 @@
         </div>
         <br>
         
-        <a href="index.html" id="return">Continue Shopping</a>
+        <a href="/index.html" id="return">Continue Shopping</a>
         <br>
     </main>
     <footer>
         <div class="footer-menu">
             <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="/index.html"><li>Home</li></a>
                 <a href="offer.html"><li>Offer</li></a>
                 <a href="newsletter.html"><li>Newsletter</li></a>
                 <a href="quiz.html"><li>Win a Voucher!</li></a>
