--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -17,7 +17,7 @@
     <div id="newsletter-container">
         <header>
             <div class="logo">
-                <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
+                <a href="/index.html"><img src="/images/mick logo.png" alt="logo"></a>
             </div>
             <div id="nav-container">
                 <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -28,7 +28,7 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="offer.html">Offer <span class="sr-only">(current)</span></a>
@@ -99,11 +99,11 @@
                 <input id="form-submit" type="submit" value="Submit" disabled>
             </form>
         </div>
-        <a href="index.html" id="anchor"></a>
+        <a href="/index.html" id="anchor"></a>
         <footer>
             <div class="footer-menu">
                 <ul>
-                    <a href="index.html"><li>Home</li></a>
+                    <a href="/index.html"><li>Home</li></a>
                     <a href="offer.html"><li>Offer</li></a>
                     <a href="newsletter.html"><li>Newsletter</li></a>
                     <a href="quiz.html"><li>Win a Voucher!</li></a>
