--- a/html/offer.html
+++ b/html/offer.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
+            <a href="/index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
         <!--Bootstrap Navigation-->
         <div id="nav-container">
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="offer.html">Offer <span class="sr-only">(current)</span></a>
@@ -122,7 +122,7 @@
     <footer>
         <div class="footer-menu">
             <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="/index.html"><li>Home</li></a>
                 <a href="offer.html"><li>Offer</li></a>
                 <a href="newsletter.html"><li>Newsletter</li></a>
                 <a href="quiz.html"><li>Win a Voucher!</li></a>
