--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="offer.html">Offer <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="html/offer.html">Offer <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="newsletter.html">Newsletter</a>
+                  <a class="nav-link" href="html/newsletter.html">Newsletter</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="quiz.html">Win a Voucher!</a>
+                  <a class="nav-link" href="html/quiz.html">Win a Voucher!</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="html/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="directions.html">Directions</a>
+                  <a class="nav-link" href="html/directions.html">Directions</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link" href="html/about.html">About</a>
                 </li>
               </ul>
             </div>
@@ -99,12 +99,12 @@
         <div class="footer-menu">
             <ul>
                 <a href="index.html"><li>Home</li></a>
-                <a href="offer.html"><li>Offer</li></a>
-                <a href="newsletter.html"><li>Newsletter</li></a>
-                <a href="quiz.html"><li>Win a Voucher!</li></a>
-                <a href="directions.html"><li>Directions</li></a>
-                <a href="contact.html"><li>Contact</li></a>
-                <a href="about.html"><li>About</li></a>
+                <a href="html/offer.html"><li>Offer</li></a>
+                <a href="html/newsletter.html"><li>Newsletter</li></a>
+                <a href="html/quiz.html"><li>Win a Voucher!</li></a>
+                <a href="html/directions.html"><li>Directions</li></a>
+                <a href="html/contact.html"><li>Contact</li></a>
+                <a href="html/about.html"><li>About</li></a>
             </ul>
         </div>
 
