optimisation of index page

--- a/html/quiz.html
+++ b/html/quiz.html
@@ -17,7 +17,7 @@
     <div id="container">
         <header>
             <div class="logo">
-                <a href="/index.html"><img src="/images/mick logo.png" alt="logo"></a>
+                <a href="/index.html"><img src="/images/mick logo.avif" alt="logo"></a>
             </div>
             <!--Bootstrap Navigation-->
             <div id="nav-container">
@@ -113,14 +113,14 @@
         <footer>
             <div class="footer-menu">
                 <ul>
-                    <a href="/index.html"><li>Home</li></a>
-                    <a href="offer.html"><li>Offer</li></a>
-                    <a href="newsletter.html"><li>Newsletter</li></a>
-                    <a href="quiz.html"><li>Win a Voucher!</li></a>
-                    <a href="directions.html"><li>Directions</li></a>
-                    <a href="contact.html"><li>Contact</li></a>
-                    <a href="about.html"><li>About</li></a>
-                </ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="offer.html">Offer</a></li>
+                    <li><a href="newsletter.html">Newsletter</a></li>
+                    <li><a href="quiz.html">Win a Voucher!</a></li>
+                    <li><a href="directions.html">Directions</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+                  </ul>
             </div>
     
             <div class="socials">
