--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <meta name="description" content="Fresh and locally sourced produce nearby you! Visit our store online or in person to see current offer!">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!--Connecting Bootstrap-->
@@ -18,7 +19,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
+            <a href="index.html"><img src="./images/mick logo.avif" alt="logo"></a>
         </div>
         <!--Bootstrap Navigation-->
         <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -98,13 +99,13 @@
     <footer>
         <div class="footer-menu">
             <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="html/offer.html"><li>Offer</li></a>
-                <a href="html/newsletter.html"><li>Newsletter</li></a>
-                <a href="html/quiz.html"><li>Win a Voucher!</li></a>
-                <a href="html/directions.html"><li>Directions</li></a>
-                <a href="html/contact.html"><li>Contact</li></a>
-                <a href="html/about.html"><li>About</li></a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="html/offer.html">Offer</a></li>
+                <li><a href="html/newsletter.html">Newsletter</a></li>
+                <li><a href="html/quiz.html">Win a Voucher!</a></li>
+                <li><a href="html/directions.html">Directions</a></li>
+                <li><a href="html/contact.html">Contact</a></li>
+                <li><a href="html/about.html">About</a></li>
             </ul>
         </div>
 
@@ -120,7 +121,6 @@
         </div>
     </footer>
     <script src="/js/index.js"></script>
-    <script src="/js/hamburger.js"></script>
 </body>
 </html>
 <!--Page created by Aneta Kotas-->
