--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html"><img src="/images/mick logo.png" alt="logo"></a>
+            <a href="/index.html"><img src="/images/mick logo.avif" alt="logo"></a>
         </div>
         <!--Bootstrap Navigation-->
         <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -80,16 +80,16 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <a href="https://unsplash.com/photos/tSlvoSZK77c" id="car1"><img class="d-block w-100" src="/images/car1.png" alt="First slide"></a>
+                <a href="https://unsplash.com/photos/tSlvoSZK77c" id="car1"><img class="d-block w-100" src="/images/car1.avif" alt="First slide"></a>
               </div>
               <div class="carousel-item">
-                <a href="https://unsplash.com/photos/uzw0g1GNjOU" id="car2"><img class="d-block w-100" src="/images/car2.png" alt="Second slide"></a>
+                <a href="https://unsplash.com/photos/uzw0g1GNjOU" id="car2"><img class="d-block w-100" src="/images/car2.avif" alt="Second slide"></a>
               </div>
               <div class="carousel-item">
-                <a href="https://unsplash.com/photos/X6szORoZqMA" id="car3"><img class="d-block w-100" src="/images/car3.png" alt="Third slide"></a>
+                <a href="https://unsplash.com/photos/X6szORoZqMA" id="car3"><img class="d-block w-100" src="/images/car3.avif" alt="Third slide"></a>
               </div>
               <div class="carousel-item">
-                <a href="https://unsplash.com/photos/JMjNnQ2xFoY" id="car4"><img class="d-block w-100" src="/images/car4.png" alt="Third slide"></a>
+                <a href="https://unsplash.com/photos/JMjNnQ2xFoY" id="car4"><img class="d-block w-100" src="/images/car4.avif" alt="Third slide"></a>
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -106,13 +106,13 @@
     <footer>
         <div class="footer-menu">
             <ul>
-                <a href="/index.html"><li>Home</li></a>
-                <a href="offer.html"><li>Offer</li></a>
-                <a href="newsletter.html"><li>Newsletter</li></a>
-                <a href="quiz.html"><li>Win a Voucher!</li></a>
-                <a href="directions.html"><li>Directions</li></a>
-                <a href="contact.html"><li>Contact</li></a>
-                <a href="about.html"><li>About</li></a>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="offer.html">Offer</a></li>
+              <li><a href="newsletter.html">Newsletter</a></li>
+              <li><a href="quiz.html">Win a Voucher!</a></li>
+              <li><a href="directions.html">Directions</a></li>
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="about.html">About</a></li>
             </ul>
         </div>
 
