Added comments to quiz and news

--- a/html/quiz.html
+++ b/html/quiz.html
@@ -54,15 +54,20 @@
                   </nav>
             </div>
         </header>
+        <!--Quiz sub heading-->
         <h2 id="quiz-heading">
             Answer these questions to be in a draw for a €100 voucher!
         </h2>
+        <!--Quiz Container-->
         <div id="quiz-container">
+            <!--Question-->
             <div id="question1">
                 <label>What was the original colour of carrots?</label>
             </div>
             <br>
+            <!--Options for question-->
             <div id="options1">
+                <!--Input type - radio-->
                 <input type="radio" value="Red" name="q1" class="q1">Red<br>
                 <input type="radio" value="Green" name="q1" class="q1">Green<br>
                 <input type="radio" value="Purple" name="q1" class="q1">Purple<br>
@@ -80,6 +85,7 @@
                 <input type="radio" value="Pumpkin" name="q2" class="q2">Pumpkin<br>
             </div>
             <br>
+            <!--Randomly generated numbers question-->
             <div id="question3">
                 <label id="random-question"></label>
             </div>
@@ -106,10 +112,12 @@
                 <input type="radio" value="Grape" name="q4" class="q4">Grape<br>
             </div>
             <br>
+            <!--Quiz Submit button-->
             <div class="submit">
                 <button id="submit-button">Submit</button>
             </div>
         </div>
+        <!--Footer-->
         <footer>
             <div class="footer-menu">
                 <ul>
