--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -14,11 +14,13 @@
     
 </head>
 <body>
+  <!--Page Container for flexbox-->
     <div id="newsletter-container">
         <header>
             <div class="logo">
                 <a href="/index.html"><img src="/images/mick logo.avif" alt="logo"></a>
             </div>
+            <!--Bootstrap Navigation-->
             <div id="nav-container">
                 <nav class="navbar navbar-expand-md navbar-light bg-light">
                     <a class="navbar-brand" href="#"></a>
@@ -53,15 +55,20 @@
                   </nav>
             </div>
         </header>
+        <!--Newsletter Sub Heading-->
         <div id="h2-container">
             <h2 id="news-h2">
                 Sign Up for monthly deals and new products!
             </h2>
         </div>
+        <!--Form Container-->
         <div id="form-container">
             <form id="form" autocomplete="off">
+              <!--Labels and Input fields on form-->
                 <label class="label" for="fName">First Name:</label>
+                <!--Each input contains a p element with validation requirements-->
                 <p>Must be longer than 2 characters</p>
+                <!--Input type - Text-->
                 <input class="input" type="text" id="fName" required>
                 <br>
                 <label class="label" for="lName">Last Name:</label>
@@ -74,10 +81,12 @@
                 <br>
                 <label class="label" for="mobile">Mobile:</label>
                 <p>Must be 10 characters and start in 08</p>
+                <!--Input type - Tel-->
                 <input class="input" type="tel" id="mobile" required>
                 <br>
                 <label class="label" for="news-choice">Which products are you interested in?</label>
                 <br>
+                <!--Input type - Dropdown Menu-->
                 <select class="dropdown" id="news-choice">
                     <option class="option" value="Fruit">Fruit</option>
                     <option class="option" value="Veg">Vegetables</option>
@@ -90,16 +99,20 @@
                 <br>
                 <label class="label">Contact Preference:</label>
                 <br>
+                <!--Input type - Radio-->
                 <input class="input" type="radio" name="contact" id="contact-choice1" value="Mobile" checked>
                 <label class="label" for="contact-choice1">Mobile (SMS)</label>
                 <br>
                 <input class="input" type="radio" name="contact" id="contact-choice2" value="Email">
                 <label class="label" for="contact-choice2">Email</label>
                 <br>
+                <!--Submit button-->
                 <input id="form-submit" type="submit" value="Submit" disabled>
             </form>
         </div>
+        <!--Return home after quiz, hidden by default-->
         <a href="/index.html" id="anchor"></a>
+        <!--Footer-->
         <footer>
             <div class="footer-menu">
               <ul>
