code cleanup, commenting

--- a/html/about.html
+++ b/html/about.html
@@ -80,15 +80,19 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
+                <!--Photo by Melissa Askew on Unsplash-->
                 <a href="https://unsplash.com/photos/tSlvoSZK77c" id="car1"><img class="d-block w-100" src="/images/car1.avif" alt="First slide"></a>
               </div>
               <div class="carousel-item">
+                <!--Photo by Bonnie Kittle on Unsplash-->
                 <a href="https://unsplash.com/photos/uzw0g1GNjOU" id="car2"><img class="d-block w-100" src="/images/car2.avif" alt="Second slide"></a>
               </div>
               <div class="carousel-item">
+                <!--Photo by Ales Krivec on Unsplash-->
                 <a href="https://unsplash.com/photos/X6szORoZqMA" id="car3"><img class="d-block w-100" src="/images/car3.avif" alt="Third slide"></a>
               </div>
               <div class="carousel-item">
+                <!--Photo by Annie Spratt on Unsplash-->
                 <a href="https://unsplash.com/photos/JMjNnQ2xFoY" id="car4"><img class="d-block w-100" src="/images/car4.avif" alt="Third slide"></a>
               </div>
             </div>
