optimisation - added labels on quiz page

--- a/html/quiz.html
+++ b/html/quiz.html
@@ -68,10 +68,14 @@
             <!--Options for question-->
             <div id="options1">
                 <!--Input type - radio-->
-                <input type="radio" value="Red" name="q1" class="q1">Red<br>
-                <input type="radio" value="Green" name="q1" class="q1">Green<br>
-                <input type="radio" value="Purple" name="q1" class="q1">Purple<br>
-                <input type="radio" value="Orange" name="q1" class="q1">Orange<br>
+                <input type="radio" value="Red" name="q1" class="q1">
+                <label for="q1">Red</label><br>
+                <input type="radio" value="Green" name="q1" class="q1">
+                <label for="q1">Green</label><br>
+                <input type="radio" value="Purple" name="q1" class="q1">
+                <label for="q1">Purple</label><br>
+                <input type="radio" value="Orange" name="q1" class="q1">
+                <label for="q1">Orange</label><br>
             </div>
             <br>
             <div id="question2">
@@ -79,10 +83,14 @@
             </div>
             <br>
             <div id="options2">
-                <input type="radio" value="Brocolli" name="q2" class="q2">Brocolli<br>
-                <input type="radio" value="Apple" name="q2" class="q2">Apple<br>
-                <input type="radio" value="Strawberry" name="q2" class="q2">Strawberry<br>
-                <input type="radio" value="Pumpkin" name="q2" class="q2">Pumpkin<br>
+                <input type="radio" value="Brocolli" name="q2" class="q2">
+                <label for="q2">Brocolli</label><br>
+                <input type="radio" value="Apple" name="q2" class="q2">
+                <label for="q2">Apple</label><br>
+                <input type="radio" value="Strawberry" name="q2" class="q2">
+                <label for="q2">Strawberry</label><br>
+                <input type="radio" value="Pumpkin" name="q2" class="q2">
+                <label for="q2">Pumpkin</label><br>
             </div>
             <br>
             <!--Randomly generated numbers question-->
@@ -106,10 +114,14 @@
             </div>
             <br>
             <div id="options4">
-                <input type="radio" value="Leek" name="q4" class="q4">Leek<br>
-                <input type="radio" value="Spinach" name="q4" class="q4">Spinach<br>
-                <input type="radio" value="Orange" name="q4" class="q4">Orange<br>
-                <input type="radio" value="Grape" name="q4" class="q4">Grape<br>
+                <input type="radio" value="Leek" name="q4" class="q4">
+                <label for="q4">Leek</label><br>
+                <input type="radio" value="Spinach" name="q4" class="q4">
+                <label for="q4">Spinach</label><br>
+                <input type="radio" value="Orange" name="q4" class="q4">
+                <label for="q4">Orange</label><br>
+                <input type="radio" value="Grape" name="q4" class="q4">
+                <label for="q4">Grape</label><br>
             </div>
             <br>
             <!--Quiz Submit button-->
