optimization - added meta tags

--- a/html/about.html
+++ b/html/about.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Quiz, Voucher">
+    <meta name="description" content="Fresh and locally sourced produce nearby you! Visit our store online or in person to see current offer!">
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
