--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fresh and locally sourced produce nearby you! Visit our store online or in person to see current offer!">
     <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Newsletter">
     <title>Mick's Garden - Newsletter Sign Up</title>
     <link rel="stylesheet" href="../style.css">
