--- a/html/directions.html
+++ b/html/directions.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Quiz, Voucher">
+    <meta name="description" content="Fresh and locally sourced produce nearby you! Visit our store online or in person to see current offer!">
     <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
     <title>Contact us</title>
     <link rel="stylesheet" href="/style.css">
