--- a/html/quiz.html
+++ b/html/quiz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fresh and locally sourced produce nearby you! Visit our store online or in person to see current offer!">
     <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Quiz, Voucher">
     <title>Mick's Garden - Voucher Competition</title>
     <link rel="stylesheet" href="../style.css">
@@ -100,13 +101,13 @@
             <br>
             <div id="options3">
                 <input type="radio" name="q3" class="q3">
-                <label id="random-wrong-1"></label><br>
+                <label for="q3" id="random-wrong-1"></label><br>
                 <input type="radio" name="q3" class="q3">
-                <label id="random-wrong-2"></label><br>
+                <label for="q3" id="random-wrong-2"></label><br>
                 <input type="radio" name="q3" id="random-value">
-                <label id="random-answer"></label><br>
+                <label for="q3" id="random-answer"></label><br>
                 <input type="radio" name="q3" class="q3">
-                <label id="random-wrong-3">-</label><br>
+                <label for="q3" id="random-wrong-3">-</label><br>
             </div>
             <br>
             <div id="question4">
